--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,6 @@
     }
   },
   "AllowedHosts": "*",
-  "GCPStorageAuthFile": "key dosyasını projeye ekleyin ve tam yolunu buraya yazın",
+  "GCPStorageAuthFile": "C:\\Users\\proje\\MongoDbECommerce\\wwwroot\\js\\astute-quarter-426218-v0-81e29a0f89d9.json",
   "GoogleCloudStorageBucketName": "firstbucketoguz"
 }
